syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/DemianShtepa/microservices-course/chat/pkg/grpc/v1/chat;chat";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  repeated string names = 1;
}

message CreateResponse {
  uint64 id = 1;
}

message DeleteRequest {
  uint64 id = 1;
}

message SendMessageRequest {
  string form = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}
